[gd_scene load_steps=2 format=3 uid="uid://bmqtey6yqb7i3"]

[ext_resource type="Script" path="res://main.gd" id="1_jh4di"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jh4di")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.221146, 0.118289, 0.714246, 1)

[node name="MenuPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "ChatApp"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Username" type="LineEdit" parent="MenuPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Optional. Username will be autogenerated if omitted"
placeholder_text = "Username"

[node name="HostButton" type="Button" parent="MenuPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="ServerAddress" type="LineEdit" parent="MenuPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Optional. Defaults to localhost:8005"
placeholder_text = "Server Address"

[node name="JoinButton" type="Button" parent="MenuPanel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="ChatPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ChatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AllMessages" type="TextEdit" parent="ChatPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "All messages"
editable = false

[node name="UserMessage" type="LineEdit" parent="ChatPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Type Your Message ..."

[node name="PeerIDLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_top = 25.0
offset_right = -33.0
offset_bottom = 48.0
grow_horizontal = 0

[connection signal="pressed" from="MenuPanel/VBoxContainer/GridContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/GridContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="gui_input" from="ChatPanel/VBoxContainer/UserMessage" to="." method="_on_user_message_gui_input"]
